[package]

name = "irsc"
version = "0.1.1"
authors = ["Till Hoeppner <till@hoeppner.ws>"]
description = "A lightweight library for building IRC bots."
documentation = "https://tilpner.github.io/irsc"
repository = "https://github.com/tilpner/irsc"
keywords = ["irc", "internet", "protocol"]
license = "MIT"

[dependencies]
log = "*"
regex = "*"
regex_macros = "*"
openssl = "*"

[features]
lints = ["clippy"]

[dependencies.carboxyl]
git = "https://github.com/tilpner/carboxyl"

[dependencies.clippy]
version = "*"
optional = true

[dev-dependencies]
env_logger = "*"
